--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,14 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "admin": [
+        "dist/admin"
+      ],
+      "authentication": [
+        "dist/authentication"
+      ]
+    },
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
